--- a/ZombieApocalypseBrep-SPR/myref.bib
+++ b/ZombieApocalypseBrep-SPR/myref.bib
@@ -1,21 +1,9 @@
-
-@website{web1,
-  title={iBlueButton},
-  url={https://www.railstutorial.org/book\newline}
-}
-@website{web2,
-  title={helpful info},
-  url={https://www.w3schools.com/}
-}
-@website{web3,
-  title={helpful info},
-  url={https://github.com/}
-}
-@website{web4,
-  title={helpful info},
-  url={http://www.beyondorganic.net/dri-calculator.html}
-}
-@website{web5,
-  title={helpful info},
-  url={http://getbootstrap.com/}
+@article{greenwade93,
+    author  = "George D. Greenwade",
+    title   = "The {C}omprehensive {T}ex {A}rchive {N}etwork ({CTAN})",
+    year    = "1993",
+    journal = "TUGBoat",
+    volume  = "14",
+    number  = "3",
+    pages   = "342--351"
 }
